# CSC-299-Project

./: .gitignore  README.md  Summary.MD  video.txt
Final Project - LifeDesk AI/lifedesk/: __init__.py  agents.py  cli.py  notes.py  storage.py  tasks.py
tasks1/: .gitignore  README.md  cli.py
tasks2/: .gitignore  README.md  cli.py  core.py  storage.py  tasks.json
tasks3/: README.md  pyproject.toml  smoketest_core.py  tasks_export.json  tasks_export.md
tasks3/src/tasks3/: __init__.py  cli.py  core.py  storage.py
tasks3/tests/: test_inc.py  test_tasks.py
tasks4/: README.md  main.py  pyproject.toml  summaries.txt
tasks4/tasks4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasks5/: README.md  cli.py  pyproject.toml  storage.py
tasks5/app/: models.py
tasks5/specs/001-task-manager-cli/: plan.md  spec.md  tasks.md
tasks5/tests/: conftest.py  test_cli.py  test_models.py  test_storage.py
